--- a/cadastro2.html
+++ b/cadastro2.html
@@ -3,13 +3,11 @@
 <head>
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
-  	
-  	<link rel="stylesheet"  href="./index.css" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" />
-    <link rel="stylesheet" href="css-cadastro2/cadastro.css">
+    <link rel="stylesheet" href="css-cadastro2/cadastro2.css">
 </head>
 <body>
-  	<div class="main">
+  	<div class="main2">
     		<div class="main__container">
       			<p>Seu cadastro está completo! </p>
       			<p>&nbsp;</p>
@@ -19,7 +17,7 @@
     		</div>
 			<div class = "buttons">
 				<div class="button" id="b1"><a href="cadastro3.html">Vamos lá!</a></div>
-				<div class="button" id="b2"><a href="#">Explorar o BankAI agora</a></div>
+				<div class="button" id="b2"><a href="resumo.html">Explorar o BankAI agora</a></div>
 			</div>
 	</div>
 </body>
