Cadastro 1, 2 e 3 completos finalizados.

--- a/cadastro3.html
+++ b/cadastro3.html
@@ -3,9 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cadastro</title>
+    <link rel="stylesheet" href="css/cadastro3.css">
+    <title>BankAI.md</title>
 </head>
 <body>
-    
+    <div class="main">
+        <div class = "perguntas">
+            <div class = "pergunta">
+                <div class = "pergunta__titulo" id = "tl">
+                  <h2>Quais são os seus objetivos financeiros?</h2>
+                </div>
+                <div class = "opcao__horizontal">
+                    <div class = "opcao__set">  
+                        <h3>Orçamento e Controle de Gastos</h3>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Estabelecer um orçamento">
+                            <h4>Estabelecer um orçamento</h4>
+                        </div>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Acompanhar despesas">
+                            <h4>Acompanhar despesas</h4>
+                        </div>
+                    <div class = "opcao__set">  
+                        <h3>Investimentos</h3>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Aumentar o patrimônio">
+                            <h4>Aumentar o patrimônio</h4>
+                        </div>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Planejar a aposentadoria">
+                            <h4>Planejar a aposentadoria</h4>
+                        </div>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Diversificar a carteira">
+                            <h4>Diversificar a carteira</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class = "opcao__vertical">
+                    <div class = "opcao__set">  
+                        <h3>Educação Financeira</h3>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Aprender sobre finanças">
+                            <h4>Aprender sobre finanças</h4>
+                        </div>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Simular opções">
+                            <h4>Simular opções</h4>
+                        </div>
+                    <div class = "opcao__set">  
+                        <h3>Redução de Dívidas</h3>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Pagar dívidas">
+                            <h4>Pagar dívidas</h4>
+                        </div>
+                        <div class = opcao>
+                            <input type="checkbox" name="opcao" value="Ofertas de portabilidade">
+                            <h4>Ofertas de portabilidade</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class = "pergunta">
+            <div class = "pergunta__titulo" id = "tl">
+                <h2>Você deseja sincronizar seus dados?</h2>
+            </div>
+            <div class = "sincronizar">
+                <div class = "opcao">
+                    <input type="checkbox" name="opcao" value="Sim">
+                    <h4>Sim</h4>
+                </div>
+                <div class = "opcao">
+                    <input type="checkbox" name="opcao" value="Não">
+                    <h4>Não</h4>
+                </div>
+            </div>
+            <div class="button">
+                <a href="resumo.html">
+                    <h5>ENVIAR</h5>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
