--- a/landing.html
+++ b/landing.html
@@ -15,12 +15,16 @@
             <h3>BankAI.md</h3>
         </div>
         <div class="nav__buttons">
+            <a href = "resumo.html>">
             <div class="nav_buttons_login">
                 <h4>Login</h4>
             </div>
+            </a>
+            <a href = "cadastro1.html>">
             <div class="nav_buttons_cadastro">
                 <h4>Cadastre-se</h4>
             </div>
+            </a>
         </div>
     </nav>
     <div></div>
